# mandelbrot

./: .gitignore  CMakeLists.txt
libs/: mandelbrot.py
src/: Mandel.cpp  cuda_mandelbrot.cu  cuda_wrapper.h  main.py  mandel.cpp  mandel.h  mandel_benchmark.cpp  mandel_main.cpp
tools/: main.cpp
